fix blurry animation

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -225,3 +225,7 @@ html {
       opacity: 1;
    }
 }
+
+/* .hero-text {
+   will-change: transform, opacity;
+} */
